# RPi_Environmental_Monitor_System

./: .gitignore  CMakeLists.txt  DataStore.cpp  DataStore.h  EnvironmentMonitor.cpp  EnvironmentMonitor.h  EnvironmentMonitor.h.in  Makefile  MasterTask.cpp  MasterTask.h  README.md
data/: bsec.txt
documents/: BoardSchematic.drawio  README.md  RPiEnvMonSys_SW_Architecture.drawio
hardware/: CMakeLists.txt
hardware/include/: ADS1115.h  Debug.h  I2Cdev.h  bme280.h  bme280_defs.h  bme68x_defs.h  bsec_integration.h  lcd_16x2.h
hardware/source/: ADS1115.cpp  Debug.cpp  I2Cdev.cpp  bme280.cpp  bme68x.cpp  bsec_integration.cpp  lcd_16x2.c
sensors/: CMakeLists.txt  README.md
sensors/include/: ADC_Sensors.h  BME280Sensor.h  BME680Sensor.h  LightSensor.h  Pwr_3p3V_Sensor.h  Pwr_5V_Sensor.h  SensorTask.h
sensors/source/: ADC_Sensors.cpp  BME280Sensor.cpp  BME680Sensor.cpp  LightSensor.cpp  Pwr_3p3V_Sensor.cpp  Pwr_5V_Sensor.cpp  SensorTask.cpp
test/: Makefile  test_ADS1115_differential  test_ADS1115_differential.cpp  test_ADS1115_single  test_ADS1115_single.cpp  test_bme280  test_bme280.cpp  test_bsec_rpi  test_bsec_rpi.cpp
ui/: CMakeLists.txt
ui/include/: DataLog.h  LCDTask.h  UITask.h
ui/source/: DataLog.cpp  LCDTask.cpp  UITask.cpp
